--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>My first three.js app</title>
-		<style>
-			body { margin: 0; }
-		</style>
-	</head>
-	<body>
-		<script type="module" src="/main.js"></script>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>ThreeJS Demo</title>
+    <script type="module">
+      window.canvas = document.getElementById('canvas')
+      window.canvas.width = innerWidth 
+      window.canvas.height = innerHeight 
+      window.iw = innerWidth
+      window.ih = innerHeight
+    </script>
+    <script src="/main.js" type="module"></script>
+  </head>
+  <body><canvas id="canvas"></canvas></body>
+  <style>* { margin: 0;padding: 0; overflow: hidden;}</style>
 </html>
